force-app/main/default/objects/CLZV6BP__Clarizen_Project__c/CLZV6BP__Clarizen_Project__c.object-meta.xml
<CustomObject>
    <label>Clarizen Project</label>
    <nameField>
        <displayFormat>P-{00000000}</displayFormat>
        <label>External ID (SF)</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Clarizen Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>