force-app/main/default/objects/CLZV6BP__Clarizen_Project__c/fields/Actual_Hours_NB__c.field-meta.xml
<CustomField>
    <fullName>Actual_Hours_NB__c</fullName>
    <label>Actual Hours (NB)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>