force-app/main/default/objects/CLZV6BP__Clarizen_Project__c/fields/CLZV6BP__ActualCost__c.field-meta.xml
<CustomField>
    <fullName>CLZV6BP__ActualCost__c</fullName>
    <description>Actual cost of the porject</description>
    <label>Actual Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>