force-app/main/default/objects/CLZV6BP__Clarizen_Project__c/fields/CLZV6BP__Clarizen_ID__c.field-meta.xml
<CustomField>
    <fullName>CLZV6BP__Clarizen_ID__c</fullName>
    <externalId>true</externalId>
    <label>Clarizen Project ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>