force-app/main/default/objects/CLZV6BP__Clarizen_Project__c/fields/CLZV6BP__CLZ_ActualRevenue__c.field-meta.xml
<CustomField>
    <fullName>CLZV6BP__CLZ_ActualRevenue__c</fullName>
    <description>Actual revenue</description>
    <label>Actual Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>