force-app/main/default/objects/CLZV6BP__Clarizen_Project__c/fields/CLZV6BP__CLZ_Billable__c.field-meta.xml
<CustomField>
    <fullName>CLZV6BP__CLZ_Billable__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Billable</label>
    <type>Checkbox</type>
</CustomField>