force-app/main/default/objects/CLZV6BP__Clarizen_Project__c/fields/CLZV6BP__CLZ_CostVariance__c.field-meta.xml
<CustomField>
    <fullName>CLZV6BP__CLZ_CostVariance__c</fullName>
    <description>Cost Variance = Earned value - Actual Cost</description>
    <inlineHelpText>Cost Variance = Earned value - Actual Cost</inlineHelpText>
    <label>Cost Variance</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>