force-app/main/default/objects/CLZV6BP__Clarizen_Project__c/fields/CLZV6BP__CLZ_CPI__c.field-meta.xml
<CustomField>
    <fullName>CLZV6BP__CLZ_CPI__c</fullName>
    <description>Cost Performance Index =  Earned Value / Actual Cost</description>
    <label>CPI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>