force-app/main/default/objects/CLZV6BP__Clarizen_Project__c/fields/CLZV6BP__CLZ_Customer__c.field-meta.xml
<CustomField>
    <fullName>CLZV6BP__CLZ_Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Clarizen Projects</relationshipLabel>
    <relationshipName>Clarizen_Projects</relationshipName>
    <type>Lookup</type>
</CustomField>