force-app/main/default/objects/CLZV6BP__Clarizen_Project__c/fields/CLZV6BP__CLZ_DueDate__c.field-meta.xml
<CustomField>
    <fullName>CLZV6BP__CLZ_DueDate__c</fullName>
    <description>Finish date of the project</description>
    <inlineHelpText>Finish date of the project</inlineHelpText>
    <label>Due Date</label>
    <type>DateTime</type>
</CustomField>