force-app/main/default/objects/CLZV6BP__Clarizen_Project__c/fields/CLZV6BP__CLZ_ETC__c.field-meta.xml
<CustomField>
    <fullName>CLZV6BP__CLZ_ETC__c</fullName>
    <description>Estimate To Complete = (Budgeted Cost - EV)/(CPI*SPI)</description>
    <label>ETC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>