force-app/main/default/objects/CLZV6BP__Clarizen_Project__c/fields/CLZV6BP__CLZ_HoldingNotes__c.field-meta.xml
<CustomField>
    <fullName>CLZV6BP__CLZ_HoldingNotes__c</fullName>
    <label>Holding Notes</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>