force-app/main/default/objects/CLZV6BP__Clarizen_Project__c/fields/CLZV6BP__CLZ_IssuesCount__c.field-meta.xml
<CustomField>
    <fullName>CLZV6BP__CLZ_IssuesCount__c</fullName>
    <label>Cases Count</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>