force-app/main/default/objects/CLZV6BP__Clarizen_Project__c/fields/CLZV6BP__CLZ_PercentCompleted__c.field-meta.xml
<CustomField>
    <fullName>CLZV6BP__CLZ_PercentCompleted__c</fullName>
    <description>Percentage of work completion</description>
    <inlineHelpText>Project completion</inlineHelpText>
    <label>% Complete</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>