force-app/main/default/objects/CLZV6BP__Clarizen_Project__c/fields/CLZV6BP__CLZ_PercentProfitability__c.field-meta.xml
<CustomField>
    <fullName>CLZV6BP__CLZ_PercentProfitability__c</fullName>
    <description>((Actual Revenue - Actual Cost) / Actual Revenue) * 100</description>
    <label>% Profitability</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>