force-app/main/default/objects/CLZV6BP__Clarizen_Project__c/fields/CLZV6BP__CLZ_PlannedRevenue__c.field-meta.xml
<CustomField>
    <fullName>CLZV6BP__CLZ_PlannedRevenue__c</fullName>
    <description>Revenue planned for the project</description>
    <label>Expected Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>