force-app/main/default/objects/CLZV6BP__Clarizen_Project__c/fields/CLZV6BP__CLZ_Profitability__c.field-meta.xml
<CustomField>
    <fullName>CLZV6BP__CLZ_Profitability__c</fullName>
    <description>Difference between actual revenue and actual cost</description>
    <label>Profit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>