force-app/main/default/objects/CLZV6BP__Clarizen_Project__c/fields/CLZV6BP__CLZ_ProjectType__c.field-meta.xml
<CustomField>
    <fullName>CLZV6BP__CLZ_ProjectType__c</fullName>
    <description>Type of the Clarizen project; represents phase in the sales process</description>
    <label>Project Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Administration</fullName>
            </value>
            <value>
                <fullName>Customer Implementation</fullName>
                <default>true</default>
                <label>Customer Implementation</label>
            </value>
            <value>
                <fullName>Internal Project</fullName>
            </value>
            <value>
                <fullName>Executive Project</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>