force-app/main/default/objects/CLZV6BP__Clarizen_Project__c/fields/CLZV6BP__CLZ_RETC__c.field-meta.xml
<CustomField>
    <fullName>CLZV6BP__CLZ_RETC__c</fullName>
    <description>Revenue Estimated To Complete = (Expected Revenue - REV)/(RPI*SPI)</description>
    <label>Revenue ETC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>