force-app/main/default/objects/CLZV6BP__Clarizen_Project__c/fields/CLZV6BP__CLZ_RevenueEarnedValue__c.field-meta.xml
<CustomField>
    <fullName>CLZV6BP__CLZ_RevenueEarnedValue__c</fullName>
    <description>Revenue Earned Value = Completed work expressed in terms of expected revenue</description>
    <inlineHelpText>Revenue Earned Value = Completed work expressed in terms of expected revenue</inlineHelpText>
    <label>Revenue EV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>