force-app/main/default/objects/CLZV6BP__Clarizen_Project__c/fields/CLZV6BP__CLZ_StartDate__c.field-meta.xml
<CustomField>
    <fullName>CLZV6BP__CLZ_StartDate__c</fullName>
    <description>Start date of the project</description>
    <inlineHelpText>Start date of the project</inlineHelpText>
    <label>Start Date</label>
    <type>DateTime</type>
</CustomField>