force-app/main/default/objects/CLZV6BP__Clarizen_Project__c/fields/CLZV6BP__CLZ_SYSID__c.field-meta.xml
<CustomField>
    <fullName>CLZV6BP__CLZ_SYSID__c</fullName>
    <description>Clarizen Object ID number - can be displayed in Clarizen grid views if system setting is selected.</description>
    <inlineHelpText>Clarizen Object ID number for your organization. Used by InterAct.</inlineHelpText>
    <label>ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>