force-app/main/default/objects/CLZV6BP__Clarizen_Project__c/fields/CLZV6BP__CLZ_TCPI__c.field-meta.xml
<CustomField>
    <fullName>CLZV6BP__CLZ_TCPI__c</fullName>
    <description>To Complete Performance Index = (Estimate At Complete - EV)/(Budgeted Cost-Actual Cost)</description>
    <label>TCPI</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>