force-app/main/default/objects/CLZV6BP__Clarizen_Project__c/fields/CLZV6BP__CLZ_TrackStatus__c.field-meta.xml
<CustomField>
    <fullName>CLZV6BP__CLZ_TrackStatus__c</fullName>
    <description>Status of the project</description>
    <inlineHelpText>Status of the project</inlineHelpText>
    <label>Track Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>On Track</fullName>
                <color>#33CC00</color>
                <default>true</default>
                <label>On Track</label>
            </value>
            <value>
                <fullName>At Risk</fullName>
                <color>#FFCC33</color>
                <label>At Risk</label>
            </value>
            <value>
                <fullName>Off Track</fullName>
                <color>#FF0000</color>
                <label>Off Track</label>
            </value>
            <value>
                <fullName>Not Active</fullName>
                <color>#DDDDDD</color>
                <label>Not Active</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>