force-app/main/default/objects/CLZV6BP__Clarizen_Project__c/fields/CLZV6BP__CLZ_Work__c.field-meta.xml
<CustomField>
    <fullName>CLZV6BP__CLZ_Work__c</fullName>
    <description>Planned Work for the Project</description>
    <inlineHelpText>Total Work = Actual Effort + Remaining Effort</inlineHelpText>
    <label>Work</label>
    <length>60</length>
    <type>Text</type>
</CustomField>