force-app/main/default/objects/CLZV6BP__Clarizen_Project__c/fields/CLZV6BP__Completed_Group__c.field-meta.xml
<CustomField>
    <fullName>CLZV6BP__Completed_Group__c</fullName>
    <description>Sets the % Completed Group according to % Completed</description>
    <formula>IF( CLZV6BP__CLZ_PercentCompleted__c &lt; 25/100,&quot;&lt;25%&quot;, IF(CLZV6BP__CLZ_PercentCompleted__c &lt;= 50/100 &amp;&amp; CLZV6BP__CLZ_PercentCompleted__c &gt;= 26/100, &quot;26% to 50%&quot;, IF(CLZV6BP__CLZ_PercentCompleted__c &lt;= 75/100 &amp;&amp; CLZV6BP__CLZ_PercentCompleted__c &gt;= 51/100, &quot;51% to 75%&quot;, IF(CLZV6BP__CLZ_PercentCompleted__c &lt;= 100/100&amp;&amp; CLZV6BP__CLZ_PercentCompleted__c &gt;= 76/100, &quot;76% to 100%&quot;, null) ) ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Complete Group</label>
    <type>Text</type>
</CustomField>