force-app/main/default/objects/CLZV6BP__Clarizen_Project__c/fields/CLZV6BP__Created_from_an_event__c.field-meta.xml
<CustomField>
    <fullName>CLZV6BP__Created_from_an_event__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Created from an event</label>
    <type>Checkbox</type>
</CustomField>