force-app/main/default/objects/CLZV6BP__Clarizen_Project__c/fields/CLZV6BP__Days_Late__c.field-meta.xml
<CustomField>
    <fullName>CLZV6BP__Days_Late__c</fullName>
    <formula>Today()- DATEVALUE( CLZV6BP__CLZ_DueDate__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Late</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>