force-app/main/default/objects/CLZV6BP__Clarizen_Project__c/fields/CLZV6BP__Opportunity__c.field-meta.xml
<CustomField>
    <fullName>CLZV6BP__Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Clarizen Projects</relationshipLabel>
    <relationshipName>Clarizen_Projects</relationshipName>
    <type>Lookup</type>
</CustomField>