force-app/main/default/objects/CLZV6BP__Clarizen_Project__c/fields/CLZV6BP__Parent_project_name__c.field-meta.xml
<CustomField>
    <fullName>CLZV6BP__Parent_project_name__c</fullName>
    <description>Name of parent project (if any)</description>
    <formula>IF(not(isblank( CLZV6BP__ParentProject__c )),  CLZV6BP__ParentProject__r.CLZV6BP__Name__c , &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent project name</label>
    <type>Text</type>
</CustomField>