force-app/main/default/objects/CLZV6BP__Clarizen_Project__c/fields/CLZV6BP__ParentProject__c.field-meta.xml
<CustomField>
    <fullName>CLZV6BP__ParentProject__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Project</label>
    <referenceTo>CLZV6BP__Clarizen_Project__c</referenceTo>
    <relationshipLabel>Clarizen Projects</relationshipLabel>
    <relationshipName>ClarizenSubProjects</relationshipName>
    <type>Lookup</type>
</CustomField>