force-app/main/default/objects/CLZV6BP__Clarizen_Project__c/fields/CLZV6BP__SPI_Group__c.field-meta.xml
<CustomField>
    <fullName>CLZV6BP__SPI_Group__c</fullName>
    <formula>IF(  CLZV6BP__CLZ_SPI__c  &lt; 0.75,&quot;&lt;0.75&quot;, IF(CLZV6BP__CLZ_SPI__c  &gt;= 0.75 &amp;&amp; CLZV6BP__CLZ_SPI__c  &lt;= 0.95, &quot;0.75 to 0.95&quot;, IF(CLZV6BP__CLZ_SPI__c  &gt;= 0.95 , &quot;&gt;0.95&quot;,null) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SPI Group</label>
    <type>Text</type>
</CustomField>