force-app/main/default/objects/CLZV6BP__Clarizen_Project__c/fields/CLZV6BP__Work_Hours__c.field-meta.xml
<CustomField>
    <fullName>CLZV6BP__Work_Hours__c</fullName>
    <formula>IF( CONTAINS( CLZV6BP__CLZ_Work__c , &quot;Hours&quot;) , VALUE(LEFT(CLZV6BP__CLZ_Work__c, LEN(CLZV6BP__CLZ_Work__c)-6)) , VALUE( CLZV6BP__CLZ_Work__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Work Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>