force-app/main/default/objects/CLZV6BP__Clarizen_Project__c/fields/End_Date_Difference__c.field-meta.xml
<CustomField>
    <fullName>End_Date_Difference__c</fullName>
    <formula>DATEVALUE(CLZV6BP__CLZ_DueDate__c) - Financial_Force_Project__r.pse__End_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End Date Difference</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>