force-app/main/default/objects/CLZV6BP__Clarizen_Project__c/fields/Internal_to_Intapp_Notes__c.field-meta.xml
<CustomField>
    <fullName>Internal_to_Intapp_Notes__c</fullName>
    <label>Internal to Intapp Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>