force-app/main/default/objects/CLZV6BP__Clarizen_Project__c/fields/Product_Line_Short_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Line_Short_Name__c</fullName>
    <label>Product Line Short Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>