force-app/main/default/objects/CLZV6BP__Clarizen_Project__c/fields/Project_Phase__c.field-meta.xml
<CustomField>
    <fullName>Project_Phase__c</fullName>
    <label>Project Phase</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0: Business Analysis</fullName>
            </value>
            <value>
                <fullName>1: Solution Design</fullName>
            </value>
            <value>
                <fullName>2: Build &amp; Test</fullName>
            </value>
            <value>
                <fullName>3: User Acceptance</fullName>
            </value>
            <value>
                <fullName>4: Deployment</fullName>
            </value>
            <value>
                <fullName>5: Ongoing Support</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>