force-app/main/default/objects/CLZV6BP__Clarizen_Project__c/fields/Project_Status_Notes__c.field-meta.xml
<CustomField>
    <fullName>Project_Status_Notes__c</fullName>
    <label>Clarizen Overall Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>