force-app/main/default/objects/CLZV6BP__Clarizen_Project__c/fields/ProjectKickoffDate__c.field-meta.xml
<CustomField>
    <fullName>ProjectKickoffDate__c</fullName>
    <label>Project Kickoff Date</label>
    <type>Date</type>
</CustomField>